# sensible_widgets

./: Cargo.toml  flake.nix
src/: dbus_access.rs  error.rs  main.rs  network.rs
src/network/: network_manager.rs  wpa_supplicant.rs
src/wpa_supplicant/: interface.rs  mod.rs
